@@ -1,0 +1,12 @@
+package test.annotationtransformer.issue2536.data.normal;
+
+import org.testng.annotations.Test;
+
+public class NonGroupClass1 {
+
+  @Test
+  public void step1() {}
+
+  @Test
+  public void step2() {}
+}
