@@ -1,0 +1,11 @@
+package test.annotationtransformer.issue2536.data.normal;
+
+import org.testng.annotations.Test;
+
+@Test
+public class NonGroupClass2 {
+
+  public void step1() {}
+
+  public void step2() {}
+}
